--- a/views/auth/register.html
+++ b/views/auth/register.html
@@ -25,36 +25,38 @@
     </div>
 
     <div class="register-box-body">
-      <p class="login-box-msg">Register a new membership</p>
+      <p class="login-box-msg">注册会员</p>
 
       <form action="/auth/register" method="post">
+        {{ .xsrfdata }}
+
         <div class="form-group has-feedback">
-          <input type="text" class="form-control" placeholder="Full name">
+          <input type="text" class="form-control" placeholder="姓名|Full name">
           <span class="glyphicon glyphicon-user form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-          <input type="email" class="form-control" placeholder="Email">
+          <input type="email" class="form-control" placeholder="邮箱|Email">
           <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="密码|Password">
           <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-          <input type="password" class="form-control" placeholder="Retype password">
+          <input type="password" class="form-control" placeholder="确认密码|Retype password">
           <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
         </div>
         <div class="row">
           <div class="col-xs-8">
             <div class="checkbox icheck">
               <label>
-              <input type="checkbox"> I agree to the <a href="#">terms</a>
+              <input type="checkbox">  我同意<a href="#">网站条款</a>
             </label>
             </div>
           </div>
           <!-- /.col -->
           <div class="col-xs-4">
-            <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+            <button type="submit" class="btn btn-success btn-block btn-flat">注册</button>
           </div>
           <!-- /.col -->
         </div>
@@ -62,13 +64,12 @@
 
       <div class="social-auth-links text-center">
         <p>- OR -</p>
-        <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign up using
-        Facebook</a>
-        <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign up using
-        Google+</a>
+        <a href="/auth/loginWechat" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-wechat"></i>微信登陆</a>
+        <a href="/auth/loginWeibo" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-weibo"></i>微博登陆</a>
+        <a href="/auth/loginQQ" class="btn btn-block btn-social btn-twitter btn-flat"><i class="fa fa-qq"></i>QQ登陆</a>
       </div>
 
-      <a href="/auth/login" class="text-center">I already have a membership</a>
+      <a href="/auth/login" class="text-center">我已有账号</a>
     </div>
     <!-- /.form-box -->
 
@@ -85,7 +86,6 @@
           increaseArea: '20%' // optional
         });
       });
-
     </script>
 </body>
 
