--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -26,12 +26,14 @@
     <p class="login-box-msg">Sign in to start your session</p>
 
     <form action="/auth/login" method="post">
+      {{ .xsrfdata }}
+
       <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="Email|邮箱">
+        <input type="email" class="form-control" placeholder="Email|邮箱" name="email">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" placeholder="Password|密码">
+        <input type="password" class="form-control" placeholder="Password|密码" name="password">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="row">
@@ -51,7 +53,7 @@
     </form>
 
     <div class="social-auth-links text-center">
-      <p>--- OR ---</p>
+      <p>- OR -</p>
       <a href="/auth/loginWechat" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-wechat"></i>微信登陆</a>
       <a href="/auth/loginWeibo" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-weibo"></i>微博登陆</a>
       <a href="/auth/loginQQ" class="btn btn-block btn-social btn-twitter btn-flat"><i class="fa fa-qq"></i>QQ登陆</a>
